Adicionando Modal na hora de excluir

--- a/views/layouts/mainLayout.hbs
+++ b/views/layouts/mainLayout.hbs
@@ -19,7 +19,14 @@
             {{{body}}}
         </div>
     </div>
-
+    <script>
+        function myAlertTop(){
+        $(".myAlert-top").show();
+        setTimeout(function(){
+            $(".myAlert-top").hide(); 
+        }, 4000);
+        }
+    </script>
 </body>
 
 </html>
