--- a/views/employee/list.hbs
+++ b/views/employee/list.hbs
@@ -4,6 +4,10 @@
     <h3>Lista de Contatos</h3>
     <a class="btn btn-primary" href="/employee"><i class="fa fa-plus"></i> Adicionar Contato </a>
 </div>
+<div class="alert alert-success myAlert-top" style="display:none;" role="alert">
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <strong>Sucesso</strong>,  O contato foi excluido !
+</div>
 <table class="table table-striped">
     <thead>
         <tr>
@@ -23,9 +27,29 @@
             <td>{{this.city}}</td>
             <td>
                 <a href="/employee/{{this._id}}"><i class="fa fa-pencil fa-lg text-warning" aria-hidden="true"></i></a>
-                <a href="/employee/delete/{{this._id}}" onclick="return confirm('Tem certeza de que deseja excluir este contato?');"><i class="fa fa-trash fa-lg text-danger" aria-hidden="true"></i></a>
+                <a data-toggle="modal" data-target="#exampleModal" href="#"><i class="fa fa-trash fa-lg text-danger" aria-hidden="true"></i></a>
             </td>
         </tr>
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Excluir Contato</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Tem certeza de que deseja excluir este contato?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Não</button>
+                <a onclick="myAlertTop()" href="/employee/delete/{{this._id}}" class="btn btn-danger">Sim</a>
+            </div>
+            </div>
+        </div>
+        </div>
         {{/each}}
     </tbody>
 </table>
