--- a/views/employee/addOrEdit.hbs
+++ b/views/employee/addOrEdit.hbs
@@ -1,4 +1,4 @@
-{{!-- // AUTOR: SÉRGIO DEIRÓ E VANDEILSON FIGUEIREDO --}}
+{{!-- // AUTOR: SÉRGIO DEIRÓ --}}
 <h3>{{viewTitle}}</h3>
 
 <form action="/employee" method="POST" autocomplete="off">
@@ -13,16 +13,51 @@
         <label>Email</label>
         <input type="text" class="form-control" name="email" placeholder="Email" value="{{employee.email}}">
         <div class="text-danger">
-            {{employee.emailError}}</div>
+            {{employee.emailError}}
+        </div>
+    </div>
+    <div class="form-group">
+        <label>Celular</label>
+        <input type="text" class="form-control" name="mobile" placeholder="Celular" value="{{employee.mobile}}">
+        <div class="text-danger">
+            {{employee.mobileError}}
+        </div>
+    </div>
+    <div class="form-group">
+        <label>CPF</label>
+        <input type="text" class="form-control" name="cpf" placeholder="CPF" value="{{employee.cpf}}">
+        <div class="text-danger">
+            {{employee.cpfError}}
+        </div>
+    </div>
+    <div class="form-group">
+        <label>RG</label>
+        <input type="text" class="form-control" name="rg" placeholder="RG" value="{{employee.rg}}">
+        <div class="text-danger">
+            {{employee.rgError}}
+        </div>
+    </div>
+    <div class="form-group">
+        <label>Data de Nascimento</label>
+        <input type="text" class="form-control" name="dateNasc" placeholder="Data de Nascimento" value="{{employee.dateNasc}}">
+        <div class="text-danger">
+            {{employee.dateNascError}}
+        </div>
     </div>
     <div class="form-row">
         <div class="form-group col-md-6">
-            <label>Celular</label>
-            <input type="text" class="form-control" name="mobile" placeholder="Celular" value="{{employee.mobile}}">
+            <label>Estado</label>
+            <input type="text" class="form-control" name="states" placeholder="Estado" value="{{employee.states}}">
+            <div class="text-danger">
+                {{employee.statesError}}
+            </div>
         </div>
         <div class="form-group col-md-6">
             <label>Cidade</label>
             <input type="text" class="form-control" name="city" placeholder="Cidade" value="{{employee.city}}">
+            <div class="text-danger">
+                {{employee.cityError}}
+            </div>
         </div>
     </div>
     <div class="form-group">
