--- a/views/layouts/mainLayout.hbs
+++ b/views/layouts/mainLayout.hbs
@@ -1,31 +1,63 @@
-{{!-- // AUTOR: SÉRGIO DEIRÓ E VANDEILSON FIGUEIREDO --}}
+{{!-- // AUTOR: SÉRGIO DEIRÓ --}}
 <!DOCTYPE html>
 
 <html>
 
 <head>
     <title>Lista de Contatos - CRUD NODE</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://unpkg.com/popper.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.10/jquery.mask.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
 </head>
 
 <body style="background: #121214">
     <div class="row" style="margin-right: 0px;margin-left: 0px;">
-        <div class="col-md-6 offset-md-3" style="background-color: #fff;margin-top: 25px;padding:20px;">
+        <div class="col-md-12 p-0 pb-5">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+                <a class="navbar-brand" href="#">Menu</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="/employee" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Contatos
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="/employee/list">Lista</a>
+                                {{#each list}}
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="/employee/{{this._id}}">Adicionar Contato</a>
+                                <div class="dropdown-divider"></div>
+                                {{/each}}
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+        <div class="col-md-10" style="background-color: #fff;margin-top: 25px;padding:20px; margin: auto">
             {{{body}}}
         </div>
     </div>
     <script>
-        function myAlertTop(){
-        $(".myAlert-top").show();
-        setTimeout(function(){
-            $(".myAlert-top").hide(); 
-        }, 4000);
+        function myAlertTop() {
+            $(".myAlert-top").show();
+            setTimeout(function () {
+                $(".myAlert-top").hide();
+            }, 4000);
         }
+        $('input[name="mobile"]').mask('(99) 99999-9999');
+        $('input[name="cpf"]').mask('999.999.999-99');
+        $('input[name="rg"]').mask('99.999.99-999');
+         $('input[name="dateNasc"]').mask('99/99/9999');
     </script>
 </body>
 
