--- a/views/layouts/mainLayout.hbs
+++ b/views/layouts/mainLayout.hbs
@@ -34,7 +34,7 @@
                                 <a class="dropdown-item" href="/employee/list">Lista</a>
                                 {{#each list}}
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="/employee/{{this._id}}">Adicionar Contato</a>
+                                <a class="dropdown-item" href="/employee">Adicionar Contato</a>
                                 <div class="dropdown-divider"></div>
                                 {{/each}}
                             </div>
