atualização de layout

--- a/views/employee/list.hbs
+++ b/views/employee/list.hbs
@@ -1,63 +1,277 @@
+{{!--
+// AUTOR: SÉRGIO DEIRÓ
+// LAYOUT: MAURICIO LANNER
+ --}}
+<div class="row">
+    <div class="col-md-12">
+        <div class="panel panel-default">
+            <div class="panel-heading c-list">
+                <span class="title">Contatos</span>
+                <ul class="pull-right c-controls">
+                    <li>
+                        <a href="#" data-toggle="modal" data-target="#create" title="Adcionar contato">
+                            <i class="fa fa-plus"> </i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="hide-search" data-command="toggle-search" data-toggle="tooltip"
+                            data-placement="top" title="Buscar">
+                            <i class="fa fa-search"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
 
-{{!-- // AUTOR: SÉRGIO DEIRÓ --}}
-<div class="d-flex justify-content-between pb-3">
-    <h3>Lista de Contatos</h3>
-    <a class="btn btn-primary" href="/employee"><i class="fa fa-plus"></i> Adicionar Contato </a>
+            <div class="row" style="display: none;">
+                <div class="col-md-12">
+                    <div class="input-group c-search">
+                        <input type="text" class="form-control" id="contact-list-search">
+                        <span class="input-group-btn">
+                            <button class="btn btn-default" type="button"><span
+                                    class="fa fa-search text-muted"></span></button>
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <ul class="list-group" id="contact-list">
+                {{#each list}}
+                <li class="list-group-item">
+                    <div class="row">
+                        <div class="col-md-2 avatar d-flex flex-column justify-content-center align-items-center">
+                            <img src="https://lh3.googleusercontent.com/-Gvq8ieRFxvU/U-wQMDsuoJI/AAAAAAAADVs/-3qBKC1CFIQ/s250/Avatar7.png"
+                                width="128px" alt="{{this.fullName}}" class="img-responsive" />
+                        </div>
+                        <div class="col-md-8 col-xs-12">
+                            <span class="name">{{this.fullName}}</span><br />
+                            <span class="fa fa-envelope-o text-muted c-info" data-toggle="tooltip"></span>
+                            <span class="visible-xs"> <span class="text-muted">{{this.email}}</span><br /></span>
+                            <span class="fa fa-mobile text-muted c-info" data-toggle="tooltip"></span>
+                            <span class="visible-xs"> <span class="text-muted">{{this.mobile}}</span><br /></span>
+                            <span class="fa fa-file-text-o text-muted c-info" data-toggle="tooltip"></span>
+                            <span class="visible-xs"> <span class="text-muted">CPF: {{this.cpf}} | RG:
+                                    {{this.rg}}</span><br /></span>
+                            <span class="fa fa-birthday-cake text-muted c-info" data-toggle="tooltip"></span>
+                            <span class="visible-xs"> <span class="text-muted">{{this.dateNasc}}</span><br /></span>
+                            <span class="fa fa-map-marker text-muted c-info" data-toggle="tooltip"></span>
+                            <span class="visible-xs"> <span class="text-muted">{{this.city}} - {{this.states}}</span><br /></span>
+                        </div>
+                        <div class="col-md-2 d-flex flex-column justify-content-center align-items-center">
+                            <a data-toggle="modal" class="btn btn-primary" data-target="#delet{{this._id}}" href="#">
+                                <i class="fa fa-trash fa-lg" aria-hidden="true"></i>
+                            </a>
+                            <br>
+                            <a data-toggle="modal" class="btn btn-primary" data-target="#edit{{this._id}}" href="#">
+                                <i class="fa fa-pencil-square-o fa-lg" aria-hidden="true"></i>
+                            </a>
+                        </div>
+                        <div class="clearfix"></div>
+                    </div>
+                </li>
+                <!-- Modal Delet-->
+                <div class="modal fade" id="delet{{this._id}}" tabindex="-1" role="dialog"
+                    aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Excluir Contato</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                Tem certeza de que deseja excluir este contato?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Não</button>
+                                <a onclick="myAlertTop()" href="/employee/delete/{{this._id}}"
+                                    class="btn btn-danger">Sim</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Modal edit-->
+                <div class="modal fade" id="edit{{this._id}}" tabindex="-1" role="dialog"
+                    aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Editar {{this.fullName}}</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <form id="editaform{{this._id}}" action="/employee" method="POST" autocomplete="off">
+                                    <input type="hidden" name="_id" value="{{this._id}}">
+                                    <div class="form-group">
+                                        <label>Nome</label>
+                                        <input type="text" class="form-control" name="fullName" placeholder="Nome"
+                                            value="{{this.fullName}}">
+                                        <div class="text-danger">
+                                            {{this.fullNameError}}</div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Email</label>
+                                        <input type="text" class="form-control" name="email" placeholder="Email"
+                                            value="{{this.email}}">
+                                        <div class="text-danger">
+                                            {{this.emailError}}
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Celular</label>
+                                        <input type="text" class="form-control" name="mobile" placeholder="Celular"
+                                            value="{{this.mobile}}">
+                                        <div class="text-danger">
+                                            {{this.mobileError}}
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>CPF</label>
+                                        <input type="text" class="form-control" name="cpf" placeholder="CPF"
+                                            value="{{this.cpf}}">
+                                        <div class="text-danger">
+                                            {{this.cpfError}}
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>RG</label>
+                                        <input type="text" class="form-control" name="rg" placeholder="RG"
+                                            value="{{this.rg}}">
+                                        <div class="text-danger">
+                                            {{this.rgError}}
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Data de Nascimento</label>
+                                        <input type="date" class="form-control" name="dateNasc"
+                                            value="{{this.dateNasc}}">
+                                        <div class="text-danger">
+                                            {{this.dateNascError}}
+                                        </div>
+                                    </div>
+                                    <div class="form-row">
+                                        <div class="form-group col-md-6">
+                                            <label>Estado</label>
+                                            <input type="text" class="form-control" name="states" placeholder="Estado"
+                                                value="{{this.states}}">
+                                            <div class="text-danger">
+                                                {{this.statesError}}
+                                            </div>
+                                        </div>
+                                        <div class="form-group col-md-6">
+                                            <label>Cidade</label>
+                                            <input type="text" class="form-control" name="city" placeholder="Cidade"
+                                                value="{{this.city}}">
+                                            <div class="text-danger">
+                                                {{this.cityError}}
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Não</button>
+                                <button type="submit" form="editaform{{this._id}}" class="btn btn-success"><i
+                                        class="fa fa-database"></i>
+                                    Salvar edição</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {{/each}}
+
+            </ul>
+        </div>
+    </div>
 </div>
-<div class="alert alert-success myAlert-top" style="display:none;" role="alert">
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <strong>Sucesso</strong>,  O contato foi excluido !
-</div>
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th>Nome</th>
-            <th>Email</th>
-            <th>Celular</th>
-            <th>Cidade</th>
-            <th>Estado</th>
-            <th>CPF</th>
-            <th>RG</th>
-            <th>Data de Nascimento</th>
-            <th>Acões</th>
-        </tr>
-    </thead>
-    <tbody>
-        {{#each list}}
-        <tr>
-            <td>{{this.fullName}}</td>
-            <td>{{this.email}}</td>
-            <td>{{this.mobile}}</td>
-            <td>{{this.city}}</td>
-            <td>{{this.states}}</td>
-            <td>{{this.cpf}}</td>
-            <td>{{this.rg}}</td>
-            <td>{{this.dateNasc}}</td>
-            <td>
-                <a href="/employee/{{this._id}}"><i class="fa fa-pencil fa-lg text-warning" aria-hidden="true"></i></a>
-                <a data-toggle="modal" data-target="#exampleModal" href="#"><i class="fa fa-trash fa-lg text-danger" aria-hidden="true"></i></a>
-            </td>
-        </tr>
-        <!-- Modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
+<!-- modal create -->
+<div class="modal fade" id="create" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Excluir Contato</h5>
+                <h5 class="modal-title" id="exampleModalLabel"> Criar Contato</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
+                    <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                Tem certeza de que deseja excluir este contato?
+                <form id="editaform{{this._id}}" action="/employee" method="POST" autocomplete="off">
+                    <input type="hidden" name="_id" value="{{this._id}}">
+                    <div class="form-group">
+                        <label>Nome</label>
+                        <input type="text" class="form-control" name="fullName" placeholder="Nome"
+                            value="{{this.fullName}}">
+                        <div class="text-danger">
+                            {{this.fullNameError}}</div>
+                    </div>
+                    <div class="form-group">
+                        <label>Email</label>
+                        <input type="text" class="form-control" name="email" placeholder="Email" value="{{this.email}}">
+                        <div class="text-danger">
+                            {{this.emailError}}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label>Celular</label>
+                        <input type="text" class="form-control" name="mobile" placeholder="Celular"
+                            value="{{this.mobile}}">
+                        <div class="text-danger">
+                            {{this.mobileError}}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label>CPF</label>
+                        <input type="text" class="form-control" name="cpf" placeholder="CPF" value="{{this.cpf}}">
+                        <div class="text-danger">
+                            {{this.cpfError}}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label>RG</label>
+                        <input type="text" class="form-control" name="rg" placeholder="RG" value="{{this.rg}}">
+                        <div class="text-danger">
+                            {{this.rgError}}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label>Data de Nascimento</label>
+                        <input type="date" class="form-control" name="dateNasc"
+                            value="{{this.dateNasc}}">
+                        <div class="text-danger">
+                            {{this.dateNascError}}
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <label>Estado</label>
+                            <input type="text" class="form-control" name="states" placeholder="Estado"
+                                value="{{this.states}}">
+                            <div class="text-danger">
+                                {{this.statesError}}
+                            </div>
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label>Cidade</label>
+                            <input type="text" class="form-control" name="city" placeholder="Cidade"
+                                value="{{this.city}}">
+                            <div class="text-danger">
+                                {{this.cityError}}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                    </div>
+                </form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Não</button>
-                <a onclick="myAlertTop()" href="/employee/delete/{{this._id}}" class="btn btn-danger">Sim</a>
-            </div>
+                <button type="submit" form="editaform{{this._id}}" class="btn btn-success"><i
+                        class="fa fa-database"></i>
+                    Criar</button>
             </div>
         </div>
-        </div>
-        {{/each}}
-    </tbody>
-</table>
+    </div>
+</div>
