--- a/views/layouts/mainLayout.hbs
+++ b/views/layouts/mainLayout.hbs
@@ -14,7 +14,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
     <style>
         html body {
-            background-color: #302442;
+            background-color: #ebebeb;
         }
 
         .bg-nav {
@@ -29,6 +29,10 @@
             background-color: #8F2BE5;
             color: #fff;
             border-color: #8F2BE5;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            padding-top: 12px;
         }
 
         .btn-primary:hover {
@@ -38,22 +42,120 @@
         }
 
         .card-dark {
-            background-color: #D2BEE0;
             margin-top: 25px;
             padding: 20px;
             margin: auto;
+        }
+
+        .panel>.list-group .list-group-item:first-child {
+            /*border-top: 1px solid rgb(204, 204, 204);*/
+        }
+
+        .list-group {
+            -webkit-box-shadow: 0px 0px 25px -9px rgba(0, 0, 0, 0.75);
+            -moz-box-shadow: 0px 0px 25px -9px rgba(0, 0, 0, 0.75);
+            box-shadow: 0px 0px 25px -9px rgba(0, 0, 0, 0.75);
+        }
+
+        @media (max-width: 767px) {
+            .visible-xs {
+                display: inline-block !important;
+            }
+
+            .block {
+                display: block !important;
+                width: 100%;
+                height: 1px !important;
+            }
+        }
+
+        #back-to-bootsnipp {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+        }
+
+
+        .c-search>.form-control {
             border-radius: 10px;
+            border-width: 0px;
+            border-bottom-width: 1px;
+            font-size: 1.3em;
+            padding: 12px 12px;
+            height: 44px;
+            outline: none !important;
         }
 
-        .text-danger {
-            color: #bb0000 !important;
+        .c-search>.form-control:focus {
+            outline: 0px !important;
+            -webkit-appearance: none;
+            box-shadow: none;
         }
 
-        .text-warning {
-            color: #ffffff !important;
+        .c-search>.input-group-btn .btn {
+            border-radius: 0px 11px 10px 0px;
+            border-width: 0px;
+            border-left-width: 1px;
+            border-bottom-width: 1px;
+            height: 43px;
+            background-color: #fff;
+            margin-bottom: 10px;
         }
-        .form-control{
-            background-color: #e5dcea;
+
+
+        .c-list {
+            padding: 0px;
+            min-height: 44px;
+        }
+
+        .title {
+            display: inline-block;
+            font-size: 1.7em;
+            font-weight: bold;
+            padding: 5px 15px;
+        }
+
+        ul.c-controls {
+            list-style: none;
+            margin: 0px;
+            min-height: 44px;
+        }
+
+        ul.c-controls li {
+            margin-top: 8px;
+            float: left;
+        }
+
+        ul.c-controls li a {
+            font-size: 1.7em;
+            padding: 11px 10px 6px;
+        }
+
+        ul.c-controls li a i {
+            min-width: 24px;
+            text-align: center;
+        }
+
+        ul.c-controls li a:hover {
+            background-color: rgba(51, 51, 51, 0.2);
+        }
+
+        .c-toggle {
+            font-size: 1.7em;
+        }
+
+        .name {
+            font-size: 1.7em;
+            font-weight: 700;
+        }
+
+        .c-info {
+            padding: 5px 10px;
+            font-size: 1.25em;
+        }
+
+        .avatar img {
+            border-radius: 50%;
         }
     </style>
 </head>
@@ -62,7 +164,7 @@
     <div class="row" style="margin-right: 0px;margin-left: 0px;">
         <div class="col-md-12 p-0 pb-5">
             <nav class="navbar navbar-expand-lg navbar-dark bg-nav">
-                <a class="navbar-brand" href="/">Menu</a>
+                <a class="navbar-brand" href="/">CrudNode</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -70,29 +172,14 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="/employee" id="navbarDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link" href="/employee/list">
                                 Contatos
                             </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="/employee/list">Lista</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="/employee">Adicionar Contato</a>
-                            </div>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="/employee" id="navbarDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link" href="/address/list">
                                 Endereços
                             </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="/address/list">Lista</a>
-                                {{#each list}}
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="/address">Adicionar Endereço</a>
-                                <div class="dropdown-divider"></div>
-                                {{/each}}
-                            </div>
                         </li>
                     </ul>
                 </div>
@@ -102,6 +189,7 @@
             {{{body}}}
         </div>
     </div>
+    <script src="//rawgithub.com/stidges/jquery-searchable/master/dist/jquery.searchable-1.0.0.min.js"></script>
     <script>
         function myAlertTop() {
             $(".myAlert-top").show();
@@ -112,8 +200,61 @@
         $('input[name="mobile"]').mask('(99) 99999-9999');
         $('input[name="cpf"]').mask('999.999.999-99');
         $('input[name="rg"]').mask('99.999.99-999');
-        $('input[name="dateNasc"]').mask('99/99/9999');
         $('input[name="cep"]').mask('99999-999');
+
+
+        $(function () {
+            /* BOOTSNIPP FULLSCREEN FIX */
+            if (window.location == window.parent.location) {
+                $('#back-to-bootsnipp').removeClass('hide');
+            }
+
+
+            $('[data-toggle="tooltip"]').tooltip();
+
+            $('#fullscreen').on('click', function (event) {
+                event.preventDefault();
+                window.parent.location = "http://bootsnipp.com/iframe/4l0k2";
+            });
+            $('a[href="#cant-do-all-the-work-for-you"]').on('click', function (event) {
+                event.preventDefault();
+                $('#cant-do-all-the-work-for-you').modal('show');
+            })
+
+            $('[data-command="toggle-search"]').on('click', function (event) {
+                event.preventDefault();
+                $(this).toggleClass('hide-search');
+
+                if ($(this).hasClass('hide-search')) {
+                    $('.c-search').closest('.row').slideUp(100);
+                } else {
+                    $('.c-search').closest('.row').slideDown(100);
+                }
+            })
+
+            $('[data-command="toggle-details"]').on('click', function (event) {
+                event.preventDefault();
+                $(this).toggleClass('hide-details');
+
+                if ($(this).hasClass('hide-details')) {
+                    $('.c-details').closest('.row').slideUp(100);
+                } else {
+                    $('.c-details').closest('.row').slideDown(100);
+                }
+            })
+
+            $('#contact-list').searchable({
+                searchField: '#contact-list-search',
+                selector: 'li',
+                childSelector: '.col-xs-12',
+                show: function (elem) {
+                    elem.slideDown(100);
+                },
+                hide: function (elem) {
+                    elem.slideUp(100);
+                }
+            })
+        });
     </script>
 </body>
 
