--- a/views/employee/list.hbs
+++ b/views/employee/list.hbs
@@ -106,14 +106,14 @@
                                     <div class="form-group">
                                         <label>Nome</label>
                                         <input type="text" class="form-control" name="fullName" placeholder="Nome"
-                                            value="{{this.fullName}}">
+                                            value="{{this.fullName}}" required>
                                         <div class="text-danger">
                                             {{this.fullNameError}}</div>
                                     </div>
                                     <div class="form-group">
                                         <label>Email</label>
-                                        <input type="text" class="form-control" name="email" placeholder="Email"
-                                            value="{{this.email}}">
+                                        <input type="email" class="form-control" name="email" placeholder="Email"
+                                            value="{{this.email}}" required>
                                         <div class="text-danger">
                                             {{this.emailError}}
                                         </div>
@@ -121,7 +121,7 @@
                                     <div class="form-group">
                                         <label>Celular</label>
                                         <input type="text" class="form-control" name="mobile" placeholder="Celular"
-                                            value="{{this.mobile}}">
+                                            value="{{this.mobile}}" required>
                                         <div class="text-danger">
                                             {{this.mobileError}}
                                         </div>
@@ -129,7 +129,7 @@
                                     <div class="form-group">
                                         <label>CPF</label>
                                         <input type="text" class="form-control" name="cpf" placeholder="CPF"
-                                            value="{{this.cpf}}">
+                                            value="{{this.cpf}}" required>
                                         <div class="text-danger">
                                             {{this.cpfError}}
                                         </div>
@@ -137,7 +137,7 @@
                                     <div class="form-group">
                                         <label>RG</label>
                                         <input type="text" class="form-control" name="rg" placeholder="RG"
-                                            value="{{this.rg}}">
+                                            value="{{this.rg}}" required>
                                         <div class="text-danger">
                                             {{this.rgError}}
                                         </div>
@@ -145,7 +145,7 @@
                                     <div class="form-group">
                                         <label>Data de Nascimento</label>
                                         <input type="date" class="form-control" name="dateNasc"
-                                            value="{{this.dateNasc}}">
+                                            value="{{this.dateNasc}}" required>
                                         <div class="text-danger">
                                             {{this.dateNascError}}
                                         </div>
@@ -154,7 +154,7 @@
                                         <div class="form-group col-md-6">
                                             <label>Estado</label>
                                             <input type="text" class="form-control" name="states" placeholder="Estado"
-                                                value="{{this.states}}">
+                                                value="{{this.states}}" required>
                                             <div class="text-danger">
                                                 {{this.statesError}}
                                             </div>
@@ -162,7 +162,7 @@
                                         <div class="form-group col-md-6">
                                             <label>Cidade</label>
                                             <input type="text" class="form-control" name="city" placeholder="Cidade"
-                                                value="{{this.city}}">
+                                                value="{{this.city}}" required>
                                             <div class="text-danger">
                                                 {{this.cityError}}
                                             </div>
@@ -203,13 +203,13 @@
                     <div class="form-group">
                         <label>Nome</label>
                         <input type="text" class="form-control" name="fullName" placeholder="Nome"
-                            value="{{this.fullName}}">
+                            value="{{this.fullName}}" required>
                         <div class="text-danger">
                             {{this.fullNameError}}</div>
                     </div>
                     <div class="form-group">
                         <label>Email</label>
-                        <input type="text" class="form-control" name="email" placeholder="Email" value="{{this.email}}">
+                        <input type="text" class="form-control" name="email" placeholder="Email" value="{{this.email}}" required>
                         <div class="text-danger">
                             {{this.emailError}}
                         </div>
@@ -217,7 +217,7 @@
                     <div class="form-group">
                         <label>Celular</label>
                         <input type="text" class="form-control" name="mobile" placeholder="Celular"
-                            value="{{this.mobile}}">
+                            value="{{this.mobile}}" required>
                         <div class="text-danger">
                             {{this.mobileError}}
                         </div>
@@ -225,13 +225,13 @@
                     <div class="form-group">
                         <label>CPF</label>
                         <input type="text" class="form-control" name="cpf" placeholder="CPF" value="{{this.cpf}}">
-                        <div class="text-danger">
+                        <div class="text-danger" required>
                             {{this.cpfError}}
                         </div>
                     </div>
                     <div class="form-group">
                         <label>RG</label>
-                        <input type="text" class="form-control" name="rg" placeholder="RG" value="{{this.rg}}">
+                        <input type="text" class="form-control" name="rg" placeholder="RG" value="{{this.rg}}" required>
                         <div class="text-danger">
                             {{this.rgError}}
                         </div>
@@ -239,7 +239,7 @@
                     <div class="form-group">
                         <label>Data de Nascimento</label>
                         <input type="date" class="form-control" name="dateNasc"
-                            value="{{this.dateNasc}}">
+                            value="{{this.dateNasc}}" required>
                         <div class="text-danger">
                             {{this.dateNascError}}
                         </div>
@@ -248,7 +248,7 @@
                         <div class="form-group col-md-6">
                             <label>Estado</label>
                             <input type="text" class="form-control" name="states" placeholder="Estado"
-                                value="{{this.states}}">
+                                value="{{this.states}}" required>
                             <div class="text-danger">
                                 {{this.statesError}}
                             </div>
@@ -256,7 +256,7 @@
                         <div class="form-group col-md-6">
                             <label>Cidade</label>
                             <input type="text" class="form-control" name="city" placeholder="Cidade"
-                                value="{{this.city}}">
+                                value="{{this.city}}" required>
                             <div class="text-danger">
                                 {{this.cityError}}
                             </div>
